Implemented PS-3947 (Refactor IO_CACHE layer to allow custom read/write function)

https://jira.percona.com/browse/PS-3947

This is a prerequisite for temporary file encryption.
https://jira.percona.com/browse/PS-3879

Cherry-picked commit MariaDB/server@318c826
"always use my_b_pread() instead of mysql_file_pread()".

Partially cherry-picked commit MariaDB/server@6309a30
"my_b_fill, inline my_b_* functions instead of hairy macros".
'my_b_fill()' function left as is.

Cherry-picked commit MariaDB/server@196e852
"misc IO_CACHE cleanups"

Cherry-picked commit MariaDB/server@1d21b22
"MDEV-10001 my_b_seek() may not work correctly after my_b_read() hits EOF"

Cherry-picked commit MariaDB/server@58b54b7
"MDEV-9044 : Binlog corruption in Galera"

Cherry-picked commit MariaDB/server@735a4a1
"MDEV-10508 Mariadb crash on out of disk space during dump import"

Cherry-picked commit MariaDB/server@1841557
"myisam/aria: don't mess with IO_CACHE::file"

Added 'MY_NODISCARD' attribute to the following 'IO_CACHE' functions:
'_my_b_get()'
'_my_b_read()'
'_my_b_write()'
'my_b_inited()'
'my_b_read()'
'my_b_write()'
'my_b_get()'
'my_b_tell()'
'my_b_get_buffer_start()'
'my_b_get_bytes_in_buffer()'
'my_b_get_pos_in_file()'
'my_b_bytes_in_cache()'
'my_b_pread()'
'init_io_cache_ext()'
'init_io_cache()'
'reinit_io_cache()'.
Calling sites updated correspondingly either with DEBUG_ASSERT or with
propagating the error code.

Various formatting and spelling fixes.